crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__rejects_non_jls_whitespace_as_token_separator.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
staticvoid static void

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      StaticKw "static" @ 0..6
      Unknown "\u{b}" @ 6..7
      VoidKw "void" @ 7..11 trailing=[Whitespace " "]
      StaticKw "static" @ 12..18
      Unknown "\u{a0}" @ 18..20
      VoidKw "void" @ 20..24
  Eof "" @ 24..24

diagnostics:
  code=java.lex.unknown_character severity=Error stage=Lexer range=6..7 message="unknown character"
  code=java.lex.unknown_character severity=Error stage=Lexer range=18..20 message="unknown character"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..6 message="unexpected token at top level"

diagnostics:
code=java.lex.unknown_character severity=Error stage=Lexer range=Some(TextRange { start: TextSize(6), end: TextSize(7) }) message=unknown character
code=java.lex.unknown_character severity=Error stage=Lexer range=Some(TextRange { start: TextSize(18), end: TextSize(20) }) message=unknown character
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(6) }) message=unexpected token at top level
