crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__rejects_raw_cr_and_crlf_in_character_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
'' '
'

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      CharacterLiteral "'" @ 0..1
      CharacterLiteral "' '" @ 2..5 leading=[Newline "\r"]
      CharacterLiteral "'" @ 7..8 leading=[Newline "\r\n"]
  Eof "" @ 8..8

diagnostics:
  code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=0..1 message="unterminated character literal"
  code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=7..8 message="unterminated character literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..1 message="unexpected token at top level"

diagnostics:
code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(1) }) message=unterminated character literal
code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(7), end: TextSize(8) }) message=unterminated character literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(1) }) message=unexpected token at top level
