crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__rejects_raw_cr_and_crlf_in_string_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"ab" "a
b"

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      StringLiteral "\"a" @ 0..2
      Identifier "b" @ 3..4 leading=[Newline "\r"]
      StringLiteral "\" \"" @ 4..7
      Identifier "a" @ 7..8
      Identifier "b" @ 10..11 leading=[Newline "\r\n"]
      StringLiteral "\"" @ 11..12
  Eof "" @ 12..12

diagnostics:
  code=java.lex.unterminated_string_literal severity=Error stage=Lexer range=0..2 message="unterminated string literal"
  code=java.lex.unterminated_string_literal severity=Error stage=Lexer range=11..12 message="unterminated string literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..2 message="unexpected token at top level"

diagnostics:
code=java.lex.unterminated_string_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unterminated string literal
code=java.lex.unterminated_string_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(11), end: TextSize(12) }) message=unterminated string literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unexpected token at top level
