crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__rejects_template_escape_outside_processor.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"Hello \{name}"

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      StringLiteral "\"Hello \\{name}\"" @ 0..15
  Eof "" @ 16..16 leading=[Newline "\n"]

diagnostics:
  code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=8..9 message="invalid escape sequence"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..15 message="unexpected token at top level"

diagnostics:
code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=Some(TextRange { start: TextSize(8), end: TextSize(9) }) message=invalid escape sequence
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(15) }) message=unexpected token at top level
