crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__rejects_text_block_opening_non_jls_whitespace.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
""" 
text
"""

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    BogusTypeDeclaration
      TextBlockLiteral "\"\"\"\u{a0}\ntext\n\"\"\"" @ 0..14
  Eof "" @ 14..14

diagnostics:
  code=java.lex.missing_text_block_line_terminator severity=Error stage=Lexer range=0..3 message="text block opening delimiter must be followed by a line terminator"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..14 message="unexpected token at top level"

diagnostics:
code=java.lex.missing_text_block_line_terminator severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(3) }) message=text block opening delimiter must be followed by a line terminator
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(14) }) message=unexpected token at top level
