crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__rejects_text_block_without_opening_line_terminator.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"""hello"""

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      TextBlockLiteral "\"\"\"hello\"\"\"" @ 0..11
  Eof "" @ 11..11

diagnostics:
  code=java.lex.missing_text_block_line_terminator severity=Error stage=Lexer range=0..3 message="text block opening delimiter must be followed by a line terminator"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..11 message="unexpected token at top level"

diagnostics:
code=java.lex.missing_text_block_line_terminator severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(3) }) message=text block opening delimiter must be followed by a line terminator
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(11) }) message=unexpected token at top level
