crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__reports_character_literals_unterminated_at_eof_01.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
'a

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    BogusTypeDeclaration
      CharacterLiteral "'a" @ 0..2
  Eof "" @ 2..2

diagnostics:
  code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=0..2 message="unterminated character literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..2 message="unexpected token at top level"

diagnostics:
code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unterminated character literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unexpected token at top level
