crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__reports_character_literals_unterminated_at_eof_02.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
'\n

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      CharacterLiteral "'\\n" @ 0..3
  Eof "" @ 3..3

diagnostics:
  code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=0..3 message="unterminated character literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..3 message="unexpected token at top level"

diagnostics:
code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(3) }) message=unterminated character literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(3) }) message=unexpected token at top level
