crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__reports_invalid_escape_sequences_in_string_and_character_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"\q" '\q' "\8" "\9" '\8' '\9'

syntax:
syntax:
CompilationUnit
  ErrorNode
    StringLiteral "\"\\q\"" @ 0..4 trailing=[Whitespace " "]
    CharacterLiteral "'\\q'" @ 5..9 trailing=[Whitespace " "]
    StringLiteral "\"\\8\"" @ 10..14 trailing=[Whitespace " "]
    StringLiteral "\"\\9\"" @ 15..19 trailing=[Whitespace " "]
    CharacterLiteral "'\\8'" @ 20..24 trailing=[Whitespace " "]
    CharacterLiteral "'\\9'" @ 25..29
  Eof "" @ 29..29

diagnostics:
  code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=2..3 message="invalid escape sequence"
  code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=7..8 message="invalid escape sequence"
  code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=12..13 message="invalid escape sequence"
  code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=17..18 message="invalid escape sequence"
  code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=22..23 message="invalid escape sequence"
  code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=27..28 message="invalid escape sequence"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..4 message="unexpected token at top level"

diagnostics:
code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=Some(TextRange { start: TextSize(2), end: TextSize(3) }) message=invalid escape sequence
code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=Some(TextRange { start: TextSize(7), end: TextSize(8) }) message=invalid escape sequence
code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=Some(TextRange { start: TextSize(12), end: TextSize(13) }) message=invalid escape sequence
code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=Some(TextRange { start: TextSize(17), end: TextSize(18) }) message=invalid escape sequence
code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=Some(TextRange { start: TextSize(22), end: TextSize(23) }) message=invalid escape sequence
code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=Some(TextRange { start: TextSize(27), end: TextSize(28) }) message=invalid escape sequence
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(4) }) message=unexpected token at top level
